deploy/scheduler/templates/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: routes
  namespace: scheduler
spec:
  routes:                          
  - kind: Rule
    match: (PathPrefix(`/executions`) && Method(`GET`)) || (Method(`POST`) && PathPrefix(`/cancel-execution`))
    services:                       
    - kind: Service
      name: scheduler
      port: 8080
